--- a/index.html
+++ b/index.html
@@ -407,32 +407,43 @@
    <body onload="document.body.style.opacity='1'">
    <div class="center">
    <pre>     
-    _.--._
-    \ ** /
-    (<>)
-    .      )  (      .
-    )\_.._/ /\ \_.._/(
-    (*_<>_  _<>_*)
-    )/ '' \ \/ / '' \(
-    '      )  (      '
-     (  ) 
-    )  (
-    (<>)
-    / ** \
-    /.-..-.\
-    
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"><a href="/team/yoda">  YODA </span></a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"><a href="/team/pep">  PEP </span></a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"><a href="/team/virtual">  VIRTUAL </span></a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"><a href="/team/https">  HTTPS </span></a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"><a href="/team/rot">  ROT </span></a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"><a href="/team/bleach">  BLEACH </span></a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"><a href="/team/aqua">  AQUA </span></a>
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣀⣀⣀⣤⣤⣤⣤⣤⣤⣤⣤⣀⣀⣀⣀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣠⣤⣖⣾⣯⣽⣿⣶⣶⣶⣾⣿⣿⣿⣿⣿⣿⣶⣶⣶⣾⣿⣭⣽⣿⣓⣶⣦⣤⣄⣀⡀⣀⣀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣤⣶⣿⣿⣿⣿⣿⣿⠿⠿⠿⠿⠛⠛⠛⠛⠛⠻⠿⠿⠿⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣆⡀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⣴⣿⣿⣿⡿⠟⠛⠉⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠛⠻⠿⡿⠋⠉⠉⠻⣿⣿⣿⣿⣿⣿⡿⠃
+    ⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣾⣿⣿⠟⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣿⣿⣿⡏⠙⠻⠁⠀
+    ⠀⠀⠀⠀⠀⠀⠀⣴⣿⣿⠟⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⣿⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⣠⣾⣿⠟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢺⣿⣿⡏⠀⠀⠀⠀⠀
+    ⠀⠀⠀⢀⣴⣿⠟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣾⣿⣿⠀⠀⠀⠀⠀⠀
+    ⠀⠀⢀⣾⡿⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣿⣿⡇⠀⠀⠀⠀⠀⠀
+    ⠀⢠⣿⡟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣸⣿⣿⠁⠀⠀⠀⠀⠀⠀
+    ⢀⡿⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣀⣀⣀⣤⣤⣄⣀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⡟⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣰⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣯⡻⣿⣿⣶⣶⣦⣤⣀⡀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⠇⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣿⣿⣿⡿⠛⠻⢿⣿⣿⣿⣿⣿⣿⣷⡜⢿⣿⣿⣿⣿⣿⣿⡆⠀⠀⠀⠀⠀⠀⣾⣿⣿⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⠏⠀⠀⠀⠀⠙⢿⣿⣷⡝⣿⣿⣿⣎⢻⣿⣿⣿⣿⣿⡇⠀⠀⠀⠀⠀⢠⣿⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⠀⠀⠀⠀⠀⣀⡼⢿⣿⣿⣎⢿⣿⣿⣦⠻⣿⣿⣿⣿⣇⠀⠀⠀⠀⠀⣸⣿⣿⠁⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⢿⡏⢁⡀⠀⢀⣀⣀⣀⣀⢻⣿⣿⣎⢿⣿⣿⣧⡹⣿⣿⣿⣿⡄⠀⠀⠀⠀⣿⣿⡟⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠘⣿⣼⣧⠀⠸⣿⣿⣿⣿⡏⣿⣿⣿⣎⢿⣿⣿⣷⡙⣿⣿⣿⣿⡀⠀⠀⢸⣿⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢹⡇⢰⣄⠀⠉⠛⠛⠉⠀⣿⣿⣿⣿⡎⢿⣿⣿⣷⡘⣿⣿⣿⡇⠀⠀⣾⣿⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣦⡘⠻⠗⠀⠐⠢⣄⣀⣾⣿⣿⣿⣿⡌⣿⣿⣿⣷⡘⣿⣿⣷⠀⢀⣿⣿⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣸⣿⣿⢀⢀⢀⢀⢀⢈⢻⣿⣿⣿⣿⣿⣷⡘⣿⣿⣿⣷⡹⣿⣿⠀⢸⣿⣿⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣖⠔⠩⠎⠲⠉⢁⣿⣿⣿⣿⣿⣿⣧⢹⣿⣿⣿⣧⢻⣿⡄⣿⣿⡿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⠀⢀⣀⣤⣶⣿⣿⣿⣿⣿⣿⣿⣿⣇⢿⣿⣿⣿⣇⣿⣷⣿⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣸⣿⡿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡸⣿⣿⣿⣿⣼⣿⣿⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧⢿⣿⣿⣿⣿⣿⣿⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣾⣿⣿⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠿⠿⠿⠼⣿⣿⣿⣿⣿⣿⣧⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣼⣿⣿⡏⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡟⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⠻⠿⠿⠇⣿⣿⣿⢹⣿⣿⡿⠟⠋⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"><a href="/team/yoda">  Killa Brad </span></a>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"><a href="/team/pep">  Killa Salmon </span></a>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"><a href="/team/virtual">  -------- </span></a>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"><a href="/team/https">  Killa Salmon#3917     </span></a>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"><a href="/team/rot">  Killa Brad#0024 </span></a>
    <span id="typElement"></span>
    </pre>
    </div>
    <pre>   </pre>
-   <pre>   <a href="https://discord.gg/crucifix"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"> Discord ||</span> </a><a href="https://metasec.host/team"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);">Team</span></a>
+   <pre>   <a href="https://discord.gg/fp3j3ayz7F"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"> Discord ||</span> </a><a href="https://braple.github.io/Killa/killa%20website"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);">Team</span></a>
    </pre>
    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
    
@@ -445,10 +456,7 @@
    function type() {
     let strs = [ 
     <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);">
-   ___ ___ ___ 
-   | . | -_| . |
-   |  _|___|  _|
-   |_|     |_|  
+GET FUCKING KILLED 
     </span>
    ];
    
@@ -521,7 +529,6 @@
    
    <style>
    span{
-       
    font-weight: bold;
    text-shadow: 0 0 5px hwb(0 0% 87%);
    }
