--- a/index.html
+++ b/index.html
@@ -93,16 +93,7 @@
    
    $('#target').teletype({
    text: [
-    'Lorem ipsum dolor sit amet, consetetur sadipscing elitr,',
-    'sed diam nonumy eirmod tempor invidunt ut labore et dolore',
-    'magna aliquyam erat, sed diam voluptua. At vero eos et',
-    'accusam et justo duo dolores et ea rebum. Stet clita kasd',
-    'gubergren, no sea takimata sanctus est Lorem ipsum dolor sit',
-    'amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr,',
-    'sed diam nonumy eirmod tempor invidunt ut labore et dolore',
-    'magna aliquyam erat, sed diam voluptua. At vero eos et accusam',
-    'et justo duo dolores et ea rebum. Stet clita kasd gubergren,',
-    'no sea takimata sanctus est Lorem ipsum dolor sit amet.'
+    'Watch Your Steps..',
    ]
    });
    
@@ -133,13 +124,13 @@
     
     <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js'></script>
         
-    <title>welcome child.</title>
+    <title>Welcome Killa.</title>
     <script src="/spark.js"></script>
     <script src="/index.js"></script>
     <meta charset="UTF-8">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Welcome To MetaSec" />
-    <meta property="og:description" content="Copyright &#169; 2021 METASEC! All Rights Reserved" />
+    <meta property="og:title" content="Welcome To Killa" />
+    <meta property="og:description" content="Copyright &#169; 2022 KiLLA!" />
     <meta property="og:url" content="https://metasec.host/" />
     <meta property="og:image" content="favicon.ico" />
     <meta name="theme-color" content="#000000">
@@ -267,8 +258,8 @@
     font-weight: bold;
     font-size: 16px;
     user-select: none;
-    color: red;
-    background: repeating-linear-gradient(120deg, red 0%, black 20%, red 20%);
+    color: hwb(301 6% 71%);
+    background: repeating-linear-gradient(120deg, hwb(301 6% 71%) 0%, black 20%, hwb(301 6% 71%) 20%);
     background-size: 60vw 60vw;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
@@ -288,8 +279,8 @@
     font-weight: bold;
     font-size: 16px;
     user-select: none;
-    color: red;
-    background: repeating-linear-gradient(120deg, red 0%, black 20%, red 20%);
+    color: hwb(301 6% 71%);
+    background: repeating-linear-gradient(120deg, hwb(301 6% 71%) 0%, black 20%, hwb(301 6% 71%) 20%);
     background-size: 60vw 60vw;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
@@ -313,7 +304,7 @@
     top: 20px;
     width: 400px;
     height: 38px;
-    background: repeating-linear-gradient(120deg, red 0%, black 60%, red 20%);
+    background: repeating-linear-gradient(120deg, hwb(301 6% 71%) 0%, black 60%, hwb(301 6% 71%) 20%);
     background-size: 60vw 60vw;
     animation: slide 10s linear infinite forwards;
     transition: 1s;
@@ -407,38 +398,21 @@
    <body onload="document.body.style.opacity='1'">
    <div class="center">
    <pre>     
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣀⣀⣀⣤⣤⣤⣤⣤⣤⣤⣤⣀⣀⣀⣀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣠⣤⣖⣾⣯⣽⣿⣶⣶⣶⣾⣿⣿⣿⣿⣿⣿⣶⣶⣶⣾⣿⣭⣽⣿⣓⣶⣦⣤⣄⣀⡀⣀⣀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣤⣶⣿⣿⣿⣿⣿⣿⠿⠿⠿⠿⠛⠛⠛⠛⠛⠻⠿⠿⠿⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣆⡀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⣴⣿⣿⣿⡿⠟⠛⠉⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠛⠻⠿⡿⠋⠉⠉⠻⣿⣿⣿⣿⣿⣿⡿⠃
-    ⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣾⣿⣿⠟⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣿⣿⣿⡏⠙⠻⠁⠀
-    ⠀⠀⠀⠀⠀⠀⠀⣴⣿⣿⠟⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⣿⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⣠⣾⣿⠟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢺⣿⣿⡏⠀⠀⠀⠀⠀
-    ⠀⠀⠀⢀⣴⣿⠟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣾⣿⣿⠀⠀⠀⠀⠀⠀
-    ⠀⠀⢀⣾⡿⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣿⣿⡇⠀⠀⠀⠀⠀⠀
-    ⠀⢠⣿⡟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣸⣿⣿⠁⠀⠀⠀⠀⠀⠀
-    ⢀⡿⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣀⣀⣀⣤⣤⣄⣀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⡟⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣰⣶⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣯⡻⣿⣿⣶⣶⣦⣤⣀⡀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⠇⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣿⣿⣿⡿⠛⠻⢿⣿⣿⣿⣿⣿⣿⣷⡜⢿⣿⣿⣿⣿⣿⣿⡆⠀⠀⠀⠀⠀⠀⣾⣿⣿⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⠏⠀⠀⠀⠀⠙⢿⣿⣷⡝⣿⣿⣿⣎⢻⣿⣿⣿⣿⣿⡇⠀⠀⠀⠀⠀⢠⣿⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⠀⠀⠀⠀⠀⣀⡼⢿⣿⣿⣎⢿⣿⣿⣦⠻⣿⣿⣿⣿⣇⠀⠀⠀⠀⠀⣸⣿⣿⠁⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⢿⡏⢁⡀⠀⢀⣀⣀⣀⣀⢻⣿⣿⣎⢿⣿⣿⣧⡹⣿⣿⣿⣿⡄⠀⠀⠀⠀⣿⣿⡟⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠘⣿⣼⣧⠀⠸⣿⣿⣿⣿⡏⣿⣿⣿⣎⢿⣿⣿⣷⡙⣿⣿⣿⣿⡀⠀⠀⢸⣿⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢹⡇⢰⣄⠀⠉⠛⠛⠉⠀⣿⣿⣿⣿⡎⢿⣿⣿⣷⡘⣿⣿⣿⡇⠀⠀⣾⣿⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣦⡘⠻⠗⠀⠐⠢⣄⣀⣾⣿⣿⣿⣿⡌⣿⣿⣿⣷⡘⣿⣿⣷⠀⢀⣿⣿⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣸⣿⣿⢀⢀⢀⢀⢀⢈⢻⣿⣿⣿⣿⣿⣷⡘⣿⣿⣿⣷⡹⣿⣿⠀⢸⣿⣿⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣖⠔⠩⠎⠲⠉⢁⣿⣿⣿⣿⣿⣿⣧⢹⣿⣿⣿⣧⢻⣿⡄⣿⣿⡿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⠀⢀⣀⣤⣶⣿⣿⣿⣿⣿⣿⣿⣿⣇⢿⣿⣿⣿⣇⣿⣷⣿⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣸⣿⡿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡸⣿⣿⣿⣿⣼⣿⣿⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧⢿⣿⣿⣿⣿⣿⣿⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣾⣿⣿⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠿⠿⠿⠼⣿⣿⣿⣿⣿⣿⣧⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣼⣿⣿⡏⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡟⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⠻⠿⠿⠇⣿⣿⣿⢹⣿⣿⡿⠟⠋⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"><a href="/team/yoda">  Killa Brad </span></a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"><a href="/team/pep">  Killa Salmon </span></a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"><a href="/team/virtual">  -------- </span></a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"><a href="/team/https">  Killa Salmon#3917     </span></a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"><a href="/team/rot">  Killa Brad#0024 </span></a>
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢤⣶⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣤⡾⠿⢿⡀⠀⠀⠀⠀⣠⣶⣿⣷⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⢀⣴⣦⣴⣿⡋⠀⠀⠈⢳⡄⠀⢠⣾⣿⠁⠈⣿⡆⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⣰⣿⣿⠿⠛⠉⠉⠁⠀⠀⠀⠹⡄⣿⣿⣿⠀⠀⢹⡇⠀⠀⠀
+    ⠀⠀⠀⠀⠀⣠⣾⡿⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⣰⣏⢻⣿⣿⡆⠀⠸⣿⠀⠀⠀
+    ⠀⠀⠀⢀⣴⠟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣾⣿⣿⣆⠹⣿⣷⠀⢘⣿⠀⠀⠀
+    ⠀⠀⢀⡾⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢰⣿⣿⠋⠉⠛⠂⠹⠿⣲⣿⣿⣧⠀⠀
+    ⠀⢠⠏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⣿⣿⣿⣷⣾⣿⡇⢀⠀⣼⣿⣿⣿⣧⠀
+    ⠰⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⠀⡘⢿⣿⣿⣿⠀
+    ⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠀⣷⡈⠿⢿⣿⡆
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⠛⠁⢙⠛⣿⣿⣿⣿⡟⠀⡿⠀⠀⢀⣿⡇
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠘⣶⣤⣉⣛⠻⠇⢠⣿⣾⣿⡄⢻⡇
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⣦⣤⣾⣿⣿⣿⣿⣆⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(301 6% 71%);"><a href="/team/yoda">  Killa Brad </span></a>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(301 6% 71%);"><a href="/team/pep">  Killa Salmon </span></a>
    <span id="typElement"></span>
    </pre>
    </div>
@@ -496,21 +470,8 @@ GET FUCKING KILLED
    
    function type() {
        let strs = [
-           "  welcome To meta sec..",
-           "  pep was here $$$..",
-           "  yoda is an esex addict..",
-           "  come cop spectrum net..",
-           "  who writes these random strings?..",
-           "  i stay winning where as you, stay losing!..",
-           "  virtual is a homo..",
-           "  aqua is stinky like nigger..",
-           "  yoda has a humongus cock..",
-           "  https Is black..",
-           "  loading nigger swag..",
-           "  mtn dew is shit..",
-           "  yo why udp mom shakin ass..",
-           "  rot is a sexy human..",
-           "  #1 loli lover bleach was here.."
+           "  Killa Brad#0024",
+           "  Killa Salmon#3917",
    ];
    var num = getRandomInt(strs.length);
    
@@ -530,7 +491,7 @@ GET FUCKING KILLED
    <style>
    span{
    font-weight: bold;
-   text-shadow: 0 0 5px hwb(0 0% 87%);
+   text-shadow: 0 0 5px hwb(301 6% 71%);
    }
    </style>
    
