--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⠛⠁⢙⠛⣿⣿⣿⣿⡟⠀⡿⠀⠀⢀⣿⡇
     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠘⣶⣤⣉⣛⠻⠇⢠⣿⣾⣿⡄⢻⡇
     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣿⣿⣿⣦⣤⣾⣿⣿⣿⣿⣆⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(301 6% 71%);"><a href="/team/yoda">  Killa Brad </span></a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(301 6% 71%);"><a href="/team/pep">  Killa Salmon </span></a>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(301 6% 71%);"><a href="/team/brad">  Killa Brad </span></a>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(301 6% 71%);"><a href="/team/salmon">  Killa Salmon </span></a>
    <span id="typElement"></span>
    </pre>
    </div>
