--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 
     /* customizable snowflake styling */
     .snowflake {
-      color: #fff;
+      color: hwb(301 6% 71%);
       font-size: 1em;
       font-family: Arial, sans-serif;
       text-shadow: 0 0 5px #000;
