--- a/index.html
+++ b/index.html
@@ -523,8 +523,7 @@ GET FUCKING KILLED
    
    function type() {
        let strs = [
-           "  ",
-           "  Killa Salmon#3917",
+           "Killa Gang..",
    ];
    var num = getRandomInt(strs.length);
    
