--- a/index.html
+++ b/index.html
@@ -473,7 +473,47 @@
         ★
       </div>
     </div>
+    <center><button id="button" style="color:hwb(301 6% 71%); font-family:'Courier New', Courier, monospace; border: none;background: none;" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>enter killa</button></center>
 
+    <script>
+      document.onkeydown = function(e) {
+      if(event.keyCode == 123) {
+          return false;
+      }
+      if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+          return false;
+      }
+      if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
+          return false;
+      }
+      if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+          return false;
+      }
+      if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+          return false;
+      }
+      }
+      document.addEventListener('contextmenu', function(e) {
+      e.preventDefault();
+      });
+      document.getElementById('site').hidden=true
+      function playAudio() {
+          myAudio = new Audio('song.mp3'); 
+          if (typeof myAudio.loop == 'boolean')
+          {
+              myAudio.loop = true;
+          }
+          else
+          {
+              myAudio.addEventListener('ended', function() {
+                  this.currentTime = 0;
+                  this.play();
+              }, false);
+          }
+          myAudio.play();
+      }
+    </script>
+    
    <script>
    
    function getRandomInt(max) {
