--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
     <meta charset="UTF-8">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Welcome To Killa" />
-    <meta property="og:description" content="Copyright &#169; 2022 KiLLA!" />
-    <meta property="og:url" content="https://metasec.host/" />
+    <meta property="og:description" content="Copyright &#169; Killa Group. " />
+    <meta property="og:url" content="https://braple.github.io/Killa/" />
     <meta property="og:image" content="favicon.ico" />
     <meta name="theme-color" content="#000000">
     <audio autoplay="true" src="/home/devilish.mp3"></audio>
