--- a/index.html
+++ b/index.html
@@ -473,7 +473,8 @@
         ★
       </div>
     </div>
-    <center><button id="button" style="color:hwb(0 100% 0%); font-family:'Courier New', Courier, monospace; border: none;background: none;" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>enter killa</button></center>
+    
+    <center><button id="button" style="color:white; font-family:'Courier New', Courier, monospace; border: none;background: none;" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>enter killa group</button></center>
 
     <script>
       document.onkeydown = function(e) {
@@ -592,3 +593,4 @@ GET FUCKING KILLED
    </script>
    </html>
     
+   
