--- a/index.html
+++ b/index.html
@@ -397,7 +397,8 @@
    
    <body onload="document.body.style.opacity='1'">
    <div class="center">
-   <pre>     
+    <h1>
+        Killa</h1><pre>     
     ⣠⠖⠿⠛⠿⠿⠿⣶⣤⣄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
     ⠁⠀⠀⠀⠀⠀⠀⠀⠈⠙⠻⣶⣦⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠿⣿⣦⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
@@ -474,8 +475,6 @@
       </div>
     </div>
     
-    <center><button id="button" style="color:white; font-family:'Courier New', Courier, monospace; border: none;background: none;" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>enter killa group</button></center>
-
     <script>
       document.onkeydown = function(e) {
       if(event.keyCode == 123) {
