--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
    <body onload="document.body.style.opacity='1'">
    <div class="center">
     <h1>
-        Killa</h1><pre>     
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="/team/brad">  Killa </span></a><pre>     
     ⣠⠖⠿⠛⠿⠿⠿⣶⣤⣄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
     ⠁⠀⠀⠀⠀⠀⠀⠀⠈⠙⠻⣶⣦⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠿⣿⣦⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
