--- a/index.html
+++ b/index.html
@@ -593,6 +593,11 @@ GET FUCKING KILLED
    </script>
    </html>
     
-   <audio src="song.mp3" controls>
-    <p> </p>
-    </audio>
+   <html>
+    <head>
+    <title> </title>
+    </head>
+    <body>
+    <!--Single background music-->
+    <audio src="song.mp3" loop autoplay ></audio>
+    
