--- a/index.html
+++ b/index.html
@@ -595,9 +595,11 @@ GET FUCKING KILLED
     
    <html>
     <head>
-    <title> </title>
+    <title>Background music</title>
+    </style>
     </head>
     <body>
-    <!--Single background music-->
-    <audio src="song.mp3" loop autoplay ></audio>
-    
+    <iframe hidden src="song.mp3"
+                  allow="autoplay" ></iframe>
+    </body>
+    </html>
