--- a/index.html
+++ b/index.html
@@ -593,13 +593,4 @@ GET FUCKING KILLED
    </script>
    </html>
     
-   <html>
-    <head>
-    <title>Background music</title>
-    </style>
-    </head>
-    <body>
-    <iframe hidden src="song.mp3"
-                  allow="autoplay" ></iframe>
-    </body>
-    </html>
+   <embed src="song.mp3" width="0" autostart="true" ></embed>
