--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="/team/salmon">  Killa Salmon </span></a>
    <span id="typElement"></span>
    </pre>
-   </div>
+   <div class="center">
    <pre>   </pre>
    <pre>   <a href="https://discord.gg/fp3j3ayz7F"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"> Discord </span> </a>
    </pre>
