--- a/index.html
+++ b/index.html
@@ -471,6 +471,8 @@
       </div>
     </div>
     
+    <center><button id="button" style="color:white; font-family:'Courier New', Courier, monospace; border: none;background: none;" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>enter killa group</button></center>
+
     <script>
       document.onkeydown = function(e) {
       if(event.keyCode == 123) {
