--- a/index.html
+++ b/index.html
@@ -470,8 +470,7 @@
         ★
       </div>
     </div>
-    
-    <center><button id="button" style="color:white; font-family:'Courier New', Courier, monospace; border: none;background: none;" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>enter killa group</button></center>
+   <button id="button" style="color:white; font-family:'Courier New', Courier, monospace; border: none;background: none;" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>enter killa group</button>
 
     <script>
       document.onkeydown = function(e) {
@@ -562,7 +561,7 @@ GET FUCKING KILLED
    
    function type() {
        let strs = [
-           "Killa Gang..",
+           "Killa Gang",
    ];
    var num = getRandomInt(strs.length);
    
