--- a/index.html
+++ b/index.html
@@ -470,8 +470,9 @@
         ★
       </div>
     </div>
-   <button id="button" style="color:white; font-family:'Courier New', Courier, monospace; border: none;background: none;" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>enter killa group</button>
-
+    <div>
+    <button id="button" style="color:white; font-family:'Courier New', Courier, monospace; border: none;background: none;   margin: 0; position: absolute; top: 50%;left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false">enter killa group</button>
+         </div>
     <script>
       document.onkeydown = function(e) {
       if(event.keyCode == 123) {
