--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
     <meta property="og:url" content="https://braple.github.io/Killa/" />
     <meta property="og:image" content="favicon.ico" />
     <meta name="theme-color" content="#000000">
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/1051942010963099788/1052996069518217256/images_1.png" type="image/gif" sizes="16x16">
     <audio autoplay="true" src="/home/devilish.mp3"></audio>
     <link rel="shortcut icon" type="image/png" href="favicon.ico" />
         <style>
