--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     
     <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js'></script>
         
-    <title>✡✞KILLA.</title>
+    <title>ギ | KILLA.</title>
     <script src="/spark.js"></script>
     <script src="/index.js"></script>
     <meta charset="UTF-8">
