--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
     <script src="/index.js"></script>
     <meta charset="UTF-8">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="✡✞" />
-    <meta property="og:description" content="Copyright &#169; Killa Group. " />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="ネCertified Killa |.gg/fp3j3ayz7F " />
     <meta property="og:url" content="https://braple.github.io/Killa/" />
     <meta name="theme-color" content="#000000">
     
