--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <script src="/index.js"></script>
     <meta charset="UTF-8">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="" />
+    <meta property="og:title" content="ゔ KILLASONTOP" />
     <meta property="og:description" content="ネCertified Killa |.gg/fp3j3ayz7F " />
     <meta property="og:url" content="https://braple.github.io/Killa/" />
     <meta name="theme-color" content="#000000">
