--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
       });
       document.getElementById('site').hidden=true
       function playAudio() {
-          myAudio = new Audio('song2.mp3'); 
+          myAudio = new Audio('song.mp3'); 
           if (typeof myAudio.loop == 'boolean')
           {
               myAudio.loop = true;
