--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
     font-weight: bold;
     font-size: 16px;
     user-select: none;
-    color: hwb(0 100% 0%);
-    background: repeating-linear-gradient(120deg, hwb(0 100% 0%) 0%, black 20%, hwb(0 100% 0%) 20%);
+    color: hwb(192 0% 0%);
+    background: repeating-linear-gradient(120deg, hwb(192 0% 0%) 0%, black 20%, hwb(192 0% 0%) 20%);
     background-size: 60vw 60vw;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
@@ -280,8 +280,8 @@
     font-weight: bold;
     font-size: 16px;
     user-select: none;
-    color: hwb(0 100% 0%);
-    background: repeating-linear-gradient(120deg, hwb(0 100% 0%) 0%, black 20%, hwb(0 100% 0%) 20%);
+    color: hwb(192 0% 0%);
+    background: repeating-linear-gradient(120deg, hwb(192 0% 0%) 0%, black 20%, hwb(192 0% 0%) 20%);
     background-size: 60vw 60vw;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
@@ -305,7 +305,7 @@
     top: 20px;
     width: 400px;
     height: 38px;
-    background: repeating-linear-gradient(120deg, hwb(0 100% 0%) 0%, black 60%, hwb(0 100% 0%) 20%);
+    background: repeating-linear-gradient(120deg, hwb(192 0% 0%) 0%, black 60%, hwb(192 0% 0%) 20%);
     background-size: 60vw 60vw;
     animation: slide 10s linear infinite forwards;
     transition: 1s;
@@ -396,36 +396,38 @@
    <body onload="document.body.style.opacity='1'">
    <div class="center">
    <pre>     
-    ⣠⠖⠿⠛⠿⠿⠿⣶⣤⣄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠁⠀⠀⠀⠀⠀⠀⠀⠈⠙⠻⣶⣦⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠿⣿⣦⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠛⢿⣷⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠹⢿⣷⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠛⣿⣷⣄⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠻⣿⣧⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⢠⣾⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⣿⣿⡆⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⢠⣿⣿⣿⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠘⢿⣿⣧⠀⠀⠀
-    ⠀⠀⣀⣤⣤⣤⣴⣾⣿⣿⣿⣿⣦⣤⣤⣤⣀⠀⠀⠀⠀⠀⠀⠀⠈⣿⣿⣷⡀⠀
-    ⠀⠀⠉⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠋⠀⠀⠀⠀⠀⠀⠀⠀⠘⣿⣿⣷⡀
-    ⠀⠀⠀⠀⠘⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⢿⣿⣿⡧
-    ⠀⠀⠀⠀⠀⣸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣤⣀⠀⠀⠀⠀⠀⠀⢺⣿⣿⣷
-    ⠀⠀⠀⠀⠀⣿⣿⣿⠿⠛⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣦⣤⣤⣴⣿⣿⣿⣿
-    ⠀⠀⠀⠀⠘⠛⠋⠀⠀⠀⠀⠀⠉⠛⠃⠉⠻⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠙⠻⢿⣿⣿⣿⣿⣿⣿⠟⠉⠀⠀⠀⠀⠀⠀⠀⠀  
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="/team/brad">  Killa Brad </span></a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="/team/salmon">  Killa Salmon </span></a>
+       /\
+      //\\
+     //  \\
+ ^   \\  //   ^
+/ \   )  (   / \
+) (   )  (   ) (
+\  \_/ /\ \_/  /
+ \__  _)(_  __/
+    \ \  / /
+     ) \/ (
+     | /\ |
+     | )( |
+     | )( |
+     | \/ |
+     )____(
+    /      \
+    \______/
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(192 0% 0%);"><a href="/team/brad">  Killa Brad </span></a>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(192 0% 0%);"><a href="/team/salmon">  Killa Salmon </span></a>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(192 0% 0%);"><a href="/team/salmon">  Killa Felony </span></a>
    <span id="typElement"></span>
    </pre>
    </div>
    <pre>   </pre>
-   <pre>   <a href="https://discord.gg/fp3j3ayz7F"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 87%);"> Discord </span> </a>
+   <pre>   <a href="https://discord.gg/fp3j3ayz7F"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(192 0% 0%);"> Community </span> </a>
    </pre>
    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
    <style>
 
     /* customizable snowflake styling */
     .snowflake {
-      color: hwb(0 100% 0%);
+      color: hwb(192 0% 0%);
       font-size: 1em;
       font-family: Arial, sans-serif;
       text-shadow: 0 0 5px #000;
@@ -435,44 +437,44 @@
     </style>
     <div class="snowflakes" aria-hidden="true">
       <div class="snowflake">
-        ★
+        ✟
       </div>
       <div class="snowflake">
-        ★
+        ψ
       </div>
       <div class="snowflake">
-        ★
+        ✟
       </div>
       <div class="snowflake">
-        ★
+        ψ
       </div>
       <div class="snowflake">
-        ★
+        ✟
       </div>
       <div class="snowflake">
-        ★
+        ψ
       </div>
       <div class="snowflake">
-        ★
+        ✟
       </div>
       <div class="snowflake">
-        ★
+        ψ
       </div>
       <div class="snowflake">
-        ★
+        ✟
       </div>
       <div class="snowflake">
-        ★
+        ψ
       </div>
       <div class="snowflake">
-        ★
+        ✟
       </div>
       <div class="snowflake">
-        ★
+        ψ
       </div>
     </div>
     <div>
-    <button id="button" style="color:white; font-family:'Courier New', Courier, monospace; border: none;background: none;   margin: 0; position: absolute; top: 50%;left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false">enter killa group</button>
+    <button id="button" style="color:hwb(192 0% 0%); font-family:'Courier New', Courier, monospace; border: none;background: none;   margin: 0; position: absolute; top: 50%;left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false">enter killa group</button>
          </div>
     <script>
       document.onkeydown = function(e) {
@@ -583,7 +585,7 @@ GET FUCKING KILLED
    <style>
    span{
    font-weight: bold;
-   text-shadow: 0 0 5px hwb(0 100% 0%);
+   text-shadow: 0 0 5px hwb(192 0% 0%);
    }
    </style>
    
