--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
     )____(
     /      \
     \______/
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(192 0% 0%);"><a href="/team/brad">  Killa Brad </span></a>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(192 0% 0%);"><a href="https://linktr.ee/killabrad">  Killa Brad </span></a>
    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(192 0% 0%);"><a href="/team/salmon">  Killa Salmon </span></a>
    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(192 0% 0%);"><a href="/team/salmon">  Killa Felony </span></a>
    <span id="typElement"></span>
