--- a/index.html
+++ b/index.html
@@ -396,26 +396,14 @@
    <body onload="document.body.style.opacity='1'">
    <div class="center">
    <pre>     
-   /\
-   //\\
-   //  \\
-   ^   \\  //   ^
-   / \   )  (   / \
-   ) (   )  (   ) (
-   \  \_/ /\ \_/  /
-    \__  _)(_  __/
-    \ \  / /
-    ) \/ (
-    | /\ |
-    | )( |
-    | )( |
-    | \/ |
-    )____(
-    /      \
-    \______/
+    ██╗  ██╗██╗██╗     ██╗      █████╗ 
+    ██║ ██╔╝██║██║     ██║     ██╔══██╗
+    █████╔╝ ██║██║     ██║     ███████║
+    ██╔═██╗ ██║██║     ██║     ██╔══██║
+    ██║  ██╗██║███████╗███████╗██║  ██║
    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(192 0% 0%);"><a href="https://linktr.ee/killabrad">  Killa Brad </span></a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(192 0% 0%);"><a href="/team/salmon">  Killa Salmon </span></a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(192 0% 0%);"><a href="/team/salmon">  Killa Felony </span></a>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(192 0% 0%);"><a href="https://linktr.ee/salmonbot">  Killa Salmon </span></a>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(192 0% 0%);"><a href="https://linktr.ee/crashtheskyline">  Killa Felony </span></a>
    <span id="typElement"></span>
    </pre>
    </div>
