--- a/index.html
+++ b/index.html
@@ -563,7 +563,9 @@ GET FUCKING KILLED
    
    function type() {
        let strs = [
-           "Killa Gang",
+           "Felony is Black",
+           "Salmon is Black",
+           "Brad   is White",
    ];
    var num = getRandomInt(strs.length);
    
