--- a/brad.html
+++ b/brad.html
@@ -1,71 +1,1 @@
-
-<!DOCTYPE HTML>
-<html>
-
-<!-- Mirrored from www.tkc.wtf/yuki by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 01 Oct 2022 06:02:10 GMT -->
-	<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js'></script>
-	<title>| Y |</title>
-  <script src="/team/yoda/sparks.js"></script>
-	<script src="/team/yoda/yoda.js"></script>
-  <script src="/team/yoda/https://use.fontawesome.com/b242fc27ff.js"></script>
-  <script src='/team/yoda/https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>  
-	<meta property="og:type" content="website">
-	<meta property="og:title" content="i fucked your mother lol." />
-	<meta property="og:description" content="Copyright © 2021 Deez Nutz! All Rights Reserved" />
-	<meta property="og:url" content="https://metasec.host/" />
-	<meta property="og:image" content="SeuQK.jpg" />
-	<meta name="theme-color" content="#000000">
-	<meta charset="UTF-8">
-	<meta name="keywords" content="kylei">
-	<meta name="viewport"content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.html">
-	<link rel="icon" type="image/png" sizes="32x32" href="https://metasec.host/favicon.ico">
-	<link rel="icon" type="image/png" sizes="16x16" href="https://metasec.host/favicon.ico">
-	<link rel="manifest" href="favicon/site.html">
-	<link rel="stylesheet" href="/team/yoda/main7c6c.css?version=1.3" />
-	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" 
-  integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" 
-  crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
-	integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" 
-  crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v3.2.0/js/all.js"
-	integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" 
-  crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
-  <link href="sex.css" rel="stylesheet">
-	<script type="text/javascript" src="main2.js" async defer></script>
-</head>
-
-<body>
-<!-- The video -->
-<video autoplay loop id="myVideo">
-    <source src="/team/yoda/sex.mp4" type="video/mp4">
-  </video>
-  
-  
-	<nav class="wrapper">
-		<p class="title fadetitle">YODA</p><hr/>
-		<div class="menu fadelinks">
-			<div class="link grow hvr-overline-from-center"><a <i class="fab fa-instagram" style='font-size:36px' href="https://instagram.com/gvab/" target="_blank"></a></i></div>	
-		</div>
-   		<div class="menu fadelinks">
-			<div class="link grow hvr-overline-from-center"><a <i class="fab fa-telegram" href="https://t.me/extorters" target="_blank"></a></i></div>	
-      		</div>
-   		<div class="menu fadelinks">
-			<div class="link grow hvr-overline-from-center"><a <i class="fab fa-spotify" href="https://open.spotify.com/artist/3estabnqOpXUGzw42MRBG3" target="_blank"></a></i></div>
-            		</div>
-   		<div class="menu fadelinks">
-			<div class="link grow hvr-overline-from-center"><a <i class="fa fa-envelope" href="/cdn-cgi/l/email-protection#20594f4441604642490e53595354454d53" target="_blank"></a></i></div>
-		</div>
-	</nav>
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script></body>
-
-
-<!-- Mirrored from www.tkc.wtf/yuki by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 01 Oct 2022 06:02:12 GMT -->
-</html>	
+dasd
