--- a/index.html
+++ b/index.html
@@ -396,27 +396,22 @@
    <body onload="document.body.style.opacity='1'">
    <div class="center">
    <pre>
-                .     .
-             ...  :``..':,     ,'`
-              : ````.'   :''::' ,,
-           ,..:..  :     .''':,;``.
-         ,`.,   `:  '`.'    ,,;:   `
-         `    :  :   :    ,'':::;,
-               `;:  .:         ':;;
-                ;:   '... ,'``::'',
-                `:`..':..'     .''`,
-                .'   .'  .;;;;;`   `,
-               :.., '` ::::::'.    '
-               ',       `::::'
-                          :::.
-                 ..:```.:'`. ::'`..
-                ..'  ,'  `:.: ::   :                                
-               .:        .:``::: .'
-               .:    ..''     :::
-                : .''          ::
-                 :             ::
-                                :
-                                :
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡇⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠤⣀⠀⢠⡀⣿⣰⢀⣠⠴⠋⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣀⣀⣀⣙⣳⣿⣿⣿⣿⣅⣀⡀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡀⢠⣄⣤⣄⣠⣶⣿⡭⣙⣷⣿⣿⣿⣯⡉⠉⠁
+    ⠀⠀⠀⠀⢀⣤⡶⠚⣿⣿⢡⣷⡻⣿⡺⡿⣻⣄⠀⣰⠟⢹⡟⣿⠀⠉⠀⠀
+    ⠀⠀⢀⡴⠛⠙⣶⣾⣿⣿⡘⢿⣿⣷⣯⣟⣛⡟⠰⠁⠀⢸⡇⠘⡆⠀⠀⠀
+    ⠀⢠⠏⠀⠀⣰⣿⣿⣿⣿⣿⣶⣍⣛⠻⠿⠟⣼⡆⠀⠀⢸⠃⠀⠀⠀⠀⠀
+    ⠀⣿⣤⣤⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡀⠀⠘⠂⠀⠀⠀⠀⠀
+    ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠘⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠇⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⢻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠈⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠿⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠉⠙⠛⠛⠛⠛⠛⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠠⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 0%);"><a href="https://linktr.ee/killabrad">  Killa Brad</span></a>
    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 0%);"><a href="https://linktr.ee/salmonbot">  Killa Salmon</span></a>
    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 0%);"><a href="https://linktr.ee/crashtheskyline">  Killa Felony</span></a>
@@ -571,7 +566,7 @@ GET FUCKING KILLED
    
    function type() {
        let strs = [
-           "shutupyourdoxxed!",
+           "Killa",
    ];
    var num = getRandomInt(strs.length);
    
