--- a/index.html
+++ b/index.html
@@ -402,13 +402,14 @@
     ██╔═██╗ ██║██║     ██║     ██╔══██║
     ██║  ██╗██║███████╗███████╗██║  ██║
     ╚═╝  ╚═╝╚═╝╚══════╝╚══════╝╚═╝  ╚═╝
-            Welcome Child
+          Welcome Child
           We Are The Killas
 
 
    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(220 0% 0%);"><a href="https://linktr.ee/killabrad">  Killa Brad</span></a>
    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(220 0% 0%);"><a href="https://linktr.ee/salmonbot">  Killa Salmon</span></a>
    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(220 0% 0%);"><a href="https://linktr.ee/crashtheskyline">  Killa Felony</span></a>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(220 0% 0%);"><a href="t.me/happy_mix">  Killa Zok</span></a>
    <span id="typElement"></span>
    </pre>
    </div>
