--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 
    <body onload="document.body.style.opacity='1'">
    <div class="center">
-   <pre>
+   <pre style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">
     ⠀⣰⡆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⣆⠀⠀
     ⣴⠁⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠃⢣⠀
     ⢻⠀⠸⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡜⠀⢸⠇
