--- a/index.html
+++ b/index.html
@@ -420,11 +420,11 @@
     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠳⢽⡁⠀⠀⠀⠀⠈⠉⠙⣿⠿⢿⢿⠍⠉⠀⠀⠀⠀⠉⣻⡯⠛⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠑⠲⠤⣀⣀⡀⠀⠈⣽⡟⣼⠀⣀⣀⣠⠤⠒⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠉⠉⢻⡏⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://linktr.ee/killabrad">  Killa Brad</span></a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://linktr.ee/salmonbot">  Killa Salmon</span></a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://linktr.ee/crashtheskyline">  Killa Felony</span></a>
-   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="t.me/happy_mix">  Killa Zok</span></a>
+                                ⠈
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://linktr.ee/killabrad">Killa Brad</span></a>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://linktr.ee/salmonbot">Killa Salmon</span></a>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://linktr.ee/crashtheskyline">Killa Felony</span></a>
+   <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="t.me/happy_mix">Killa Zok</span></a>
    <span id="typElement"></span>
    </pre>
    </div>
@@ -576,7 +576,7 @@ GET FUCKING KILLED
    
    function type() {
        let strs = [
-           " Killa",
+           "shutupyourdoxxed",
    ];
    var num = getRandomInt(strs.length);
    
