--- a/index.html
+++ b/index.html
@@ -489,7 +489,9 @@
 <pre>
 ╦ ╦╔═╗╦  ╔═╗╔═╗╔╦╗╔═╗  ╔╦╗╔═╗  ╦╔═╦╦  ╦  ╔═╗
 ║║║║╣ ║  ║  ║ ║║║║║╣    ║ ║ ║  ╠╩╗║║  ║  ╠═╣
-╚╩╝╚═╝╩═╝╚═╝╚═╝╩ ╩╚═╝   ╩ ╚═╝  ╩ ╩╩╩═╝╩═╝╩ ╩</button>
+╚╩╝╚═╝╩═╝╚═╝╚═╝╩ ╩╚═╝   ╩ ╚═╝  ╩ ╩╩╩═╝╩═╝╩ ╩
+      Click To Continue To The Site.                                  
+</button>
 </pre>
     </div>
  
