--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 40%); text-align: center;"><a href="https://linktr.ee/killabrad">    ⛧ Killa Brad</span></a> <a>⛧</a> <a href="https://linktr.ee/salmonbot">Killa Salmon ⛧</span></a>
  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 40%); text-align: center;"><a href="t.me/happy_mix">    ⛧ Killa Zok</span></a>  <a>⛧</a> <a href="https://linktr.ee/crashtheskyline">Killa Felony ⛧</span></a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 40%); text-align: center;"><a href="t.me/happy_mix"><a href="https://linktr.ee/killazate">    ⛧ Killa Zate ⛧</span></a> 
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 40%); text-align: center;"><a href="t.me/happy_mix">    ⛧ Killa Zate ⛧</span></a> 
  <span id="typElement"></span>
  </pre>
  </div>
@@ -486,7 +486,8 @@
 
     <div>
       <button id="button" style="color:hwb(0 0% 0%); font-family:'Courier New', Courier, monospace; border: none; margin: 0; background-color: #000000; position: absolute; top: 50%;left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); width: 100%; height: 100%;" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false">   
-<pre>
+  <div class="center">
+  <pre>
 ╦ ╦╔═╗╦  ╔═╗╔═╗╔╦╗╔═╗  ╔╦╗╔═╗  ╦╔═╦╦  ╦  ╔═╗
 ║║║║╣ ║  ║  ║ ║║║║║╣    ║ ║ ║  ╠╩╗║║  ║  ╠═╣
 ╚╩╝╚═╝╩═╝╚═╝╚═╝╩ ╩╚═╝   ╩ ╚═╝  ╩ ╩╩╩═╝╩═╝╩ ╩
