--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@
   ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  ⠀⠉⠉⠉⢻⡏⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  
 
  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 40%); text-align: center;"><a href="https://linktr.ee/killabrad">    ⛧ Killa Brad</span></a> <a>⛧</a> <a href="https://linktr.ee/salmonbot">Killa Salmon ⛧</span></a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 40%); text-align: center;"><a href="t.me/happy_mix">    ⛧ Killa Zok</span></a>  <a>⛧</a> <a href="https://linktr.ee/crashtheskyline">Killa Felony ⛧</span></a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 40%); text-align: center;"><a href="t.me/happy_mix">    ⛧ Killa Zate ⛧</span></a> 
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 40%); text-align: center;"><a href="https://en.wikipedia.org/wiki/Cock_and_ball_torture">    ⛧ Killa Zok</span></a>  <a>⛧</a> <a href="https://linktr.ee/crashtheskyline">Killa Felony ⛧</span></a>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 40%); text-align: center;"><a href="https://linktr.ee/killazate">    ⛧ Killa Zate ⛧</span></a> 
  <span id="typElement"></span>
  </pre>
  </div>
