--- a/index.html
+++ b/index.html
@@ -592,6 +592,8 @@ GET FUCKING KILLED
          "brad is black",
          "salmon is a skid",
          "idk abt felony lol",
+         "zate is racist",
+         "zate has multiple kids in his basement",
  ];
  var num = getRandomInt(strs.length);
  
