--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 ╦ ╦╔═╗╦  ╔═╗╔═╗╔╦╗╔═╗  ╔╦╗╔═╗  ╦╔═╦╦  ╦  ╔═╗
 ║║║║╣ ║  ║  ║ ║║║║║╣    ║ ║ ║  ╠╩╗║║  ║  ╠═╣
 ╚╩╝╚═╝╩═╝╚═╝╚═╝╩ ╩╚═╝   ╩ ╚═╝  ╩ ╩╩╩═╝╩═╝╩ ╩
-                                                     Click To Continue To The Site.                                  
+                                    Click To Continue To The Site.                                  
 </button>
 </pre>
     </div>
@@ -586,15 +586,16 @@ GET FUCKING KILLED
  
  function type() {
      let strs = [
-         "shutupyourdoxxed",
-         "salmonwashere",
-         "zok is gay",
-         "brad is black",
-         "salmon is a skid",
-         "idk abt felony lol",
-         "zate is racist",
-         "zate has multiple kids in his basement",
+           "    shutupyourdoxxed",
+           "    salmonwashere",
+           "    zok is gay",
+           "    brad is black",
+           "    salmon is a skid",
+           "    felony is cool :thumbsup:",
+           "    zate is racist",
+           "    zate has multiple kids in his basement",
  ];
+
  var num = getRandomInt(strs.length);
  
  var typElement = document.getElementById('typElement');
