--- a/index.html
+++ b/index.html
@@ -422,9 +422,9 @@
   ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠑⠲⠤⣀⣀⡀ ⠈⣽⡟⣼⠀⣀⣀⣠⠤⠒⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
   ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  ⠀⠉⠉⠉⢻⡏⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  
 
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 40%); text-align: center;"><a href="https://linktr.ee/killabrad">     ⛧ Killa Brad</span></a> <a>⛧</a> <a href="https://linktr.ee/salmonbot">Killa Salmon  ⛧</span></a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 40%); text-align: center;"><a href="https://en.wikipedia.org/wiki/Cock_and_ball_torture">     ⛧ Killa Zok</span></a>  <a>⛧</a> <a href="https://linktr.ee/crashtheskyline">Killa Felony  ⛧</span></a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 40%); text-align: center;"><a href="https://linktr.ee/killazate">      ⛧ Killa Zate</span></a> <a>⛧</a> <a href="https://killa.lol">Killa Slammed ⛧</span></a> 
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 40%); text-align: center;"><a href="https://linktr.ee/killabrad">    ⛧  Killa Brad</span></a> <a>⛧</a> <a href="https://linktr.ee/salmonbot">Killa Salmon  ⛧</span></a>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 40%); text-align: center;"><a href="https://en.wikipedia.org/wiki/Cock_and_ball_torture">    ⛧  Killa Zok</span></a>  <a>⛧</a> <a href="https://linktr.ee/crashtheskyline">Killa Felony  ⛧</span></a>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 40%); text-align: center;"><a href="https://linktr.ee/killazate">     ⛧  Killa Zate</span></a> <a>⛧</a> <a href="https://killa.lol">Killa Slammed ⛧</span></a> 
  <span id="typElement"></span>
  </pre>
  </div>
@@ -586,14 +586,15 @@ GET FUCKING KILLED
  
  function type() {
      let strs = [
-           "    shutupyourdoxxed",
-           "    salmonwashere",
-           "    zok is gay",
-           "    brad is black",
-           "    salmon is a skid",
-           "    felony is cool :thumbsup:",
-           "    zate is racist",
-           "    zate has multiple kids in his basement",
+           "   shutupyourdoxxed",
+           "   salmonwashere",
+           "   zok is gay",
+           "   brad is black",
+           "   salmon is a skid",
+           "   felony is cool :thumbsup:",
+           "   zate is racist",
+           "   zate has multiple kids in his basement",
+           "   slammed swatted himself",
  ];
 
  var num = getRandomInt(strs.length);
