--- a/salmon.html
+++ b/salmon.html
@@ -598,6 +598,10 @@ GET FUCKING KILLED
  function type() {
      let strs = [
            "salmonwashere",
+           "i can write whatever i want here",
+           "salmon is a massive skid",
+           "minecraft salmon",
+           
  ];
 
  var num = getRandomInt(strs.length);
