--- a/brad.html
+++ b/brad.html
@@ -125,7 +125,7 @@
   
   <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js'></script>
       
-  <title>ギ | Salmon</title>
+  <title>ギ | Brad</title>
   <script src="/spark.js"></script>
   <script src="/index.js"></script>
   <meta charset="UTF-8">
@@ -412,11 +412,10 @@
     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠻⣿⣷⣄⠀⠀⠀⠀⠀⠀⠀⠀
     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⢿⣿⣷⡀⠀⠀⠀⠀⠀⠀
     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 57%); text-align: center;"><a2> ⛏ ⛏ ⛏  Killa Salmon  ⛏ ⛏ ⛏</span></a2>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 57%); text-align: center;"><a2> ⛏ ⛏ ⛏  Killa Brad  ⛏ ⛏ ⛏</span></a2>
  <a>---</a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 57%); text-align: center;"><a href="https://t.me/SalmonB0T">⛏  Telegram  ⛏</span></a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 57%); text-align: center;"><a href="http://discordapp.com/users/472260067417128970">⛏  Discord  ⛏</span></a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 57%); text-align: center;"><a href="https://www.roblox.com/users/2438718859/profile">⛏  Roblox  ⛏</span></a>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 57%); text-align: center;"><a href="https://discord.com/users/1000022273673138226">⛏  Discord  ⛏</span></a>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 57%); text-align: center;"><a href="https://roblox.com/users/47197/profile">⛏  Roblox  ⛏</span></a>
 
  <span id="typElement"></span>
  </pre>
@@ -593,7 +592,7 @@ GET FUCKING KILLED
  
  function type() {
      let strs = [
-           "  salmonwashere",
+           "  bradwashere",
  ];
 
  var num = getRandomInt(strs.length);
