--- a/index.html
+++ b/index.html
@@ -132,12 +132,11 @@
   <meta property="og:type" content="Killa.lol">
   <meta property="og:title" content="ゔ KILLASONTOP" />
   <meta property="og:description" content="ネCertified Killa |.gg/fp3j3ayz7F " />
-  <meta property="og:url" content="https://braple.github.io/Killa/" />
+  <meta property="og:url" content="https://killa.lol" />
   <meta name="theme-color" content="#000000">
   <style type="text/css">* {cursor: url(https://cur.cursors-4u.net/others/oth-8/oth704.cur), auto !important;}</style><a href="https://killa.lol" target="_blank" title="Bloody Knife"><img src="https://cur.cursors-4u.net/cursor.png" border="0" alt="Bloody Knife" style="position:absolute; top: 0px; right: 0px;" /></a>
   <link rel="icon" href="https://cdn.discordapp.com/attachments/1051942010963099788/1052996069518217256/images_1.png" type="image/gif" sizes="16x16">
-  <audio autoplay="true" src="/home/devilish.mp3"></audio>
-      <style>
+  <style>
   
       
  
