--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
   <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js'></script>
       
   <title>ギ | KILLA.</title>
-  <script src="spark.js"></script>
-  <script src="index.js"></script>
+  <script src="/spark.js"></script>
+  <script src="/index.js"></script>
   <meta charset="UTF-8">
   <meta property="og:type" content="Killa.lol">
   <meta property="og:title" content="ゔ KILLASONTOP" />
