--- a/brad.html
+++ b/brad.html
@@ -193,7 +193,7 @@
   background-color: rgb(0, 0, 0);
   overflow: hidden;
   font-family: "Brandon Light";
-  color: #01418a;
+  color: #8a0101;
   user-select: none;
   opacity: 0;
   transition: opacity 2s;
@@ -201,7 +201,7 @@
  }
  
  a {
-  color: rgb(0, 64, 80);
+  color: rgb(156, 0, 0);
   text-decoration: none;
   padding: 0;
  }
@@ -260,7 +260,7 @@
   font-size: 16px;
   user-select: none;
   color: hwb(0 0% 0%);
-  background: repeating-linear-gradient(120deg, hwb(155 0% 49%) 0%, black 20%, hwb(177 0% 48%) 20%);
+  background: repeating-linear-gradient(120deg, hwb(0 0% 49%) 0%, black 20%, hwb(0 0% 0%) 20%);
   background-size: 60vw 60vw;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -281,7 +281,7 @@
   font-size: 16px;
   user-select: none;
   color: hwb(0 0% 0%);
-  background: repeating-linear-gradient(120deg, hwb(155 0% 49%) 0%, black 20%, hwb(177 0% 48%) 20%);
+  background: repeating-linear-gradient(120deg, hwb(0 0% 49%) 0%, black 20%, hwb(0 0% 0%) 20%);
   background-size: 60vw 60vw;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -305,7 +305,7 @@
   top: 20px;
   width: 400px;
   height: 38px;
-  background: repeating-linear-gradient(120deg, hwb(155 0% 49%) 0%, black 20%, hwb(177 0% 48%) 20%);
+  background: repeating-linear-gradient(120deg, hwb(0 1% 27%) 0%, black 20%, hwb(0 0% 48%) 20%);
   background-size: 60vw 60vw;
   animation: slide 10s linear infinite forwards;
   transition: 1s;
@@ -411,10 +411,11 @@
     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠙⢿⣿⣷⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠻⣿⣷⣄⠀⠀⠀⠀⠀⠀⠀⠀
     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⢿⣿⣷⡀⠀⠀⠀⠀⠀⠀
-    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠁⠀⠀⠀⠀⠀
+
  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 0%); text-align: center;"><a2> ⛏ ⛏ ⛏  Killa Brad  ⛏ ⛏ ⛏</span></a2>
  <a>---</a>
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(155 0% 49%); text-align: center;"><a href="https://discord.com/users/1000022273673138226">⛏  Discord  ⛏</span></a>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 49%); text-align: center;"><a href="https://discord.com/users/1000022273673138226">⛏  Discord  ⛏</span></a>
  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 0%); text-align: center;"><a href="https://roblox.com/users/47197/profile">⛏  Roblox  ⛏</span></a>
 
  <span id="typElement"></span>
@@ -428,7 +429,7 @@
 
   /* customizable snowflake styling */
   .snowflake {
-    color: hwb(0 100% 0%);
+    color: hwb(0 0% 41%);
     font-size: 1em;
     font-family: Arial, sans-serif;
     text-shadow: 0 0 5px rgb(255, 0, 0);
@@ -477,7 +478,7 @@
   <div>
 
     <div>
-      <button id="button" style="color:hwb(0 100% 0%); font-family:'Courier New', Courier, monospace; border: none; margin: 0; background-color: #000000; position: absolute; top: 50%;left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); width: 100%; height: 100%;" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false">   
+      <button id="button" style="color:hwb(0 0% 0%); font-family:'Courier New', Courier, monospace; border: none; margin: 0; background-color: #000000; position: absolute; top: 50%;left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); width: 100%; height: 100%;" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false">   
   <div class="center">
   <pre>
     
