--- a/salmon.html
+++ b/salmon.html
@@ -531,7 +531,7 @@
     });
     document.getElementById('site').hidden=true
     function playAudio() {
-        myAudio = new Audio('song2.mp3'); 
+        myAudio = new Audio('songg.mp3'); 
         if (typeof myAudio.loop == 'boolean')
         {
             myAudio.loop = true;
