--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
   ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠑⠲⠤⣀⣀⡀ ⠈⣽⡟⣼⠀⣀⣀⣠⠤⠒⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
   ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  ⠀⠉⠉⠉⢻⡏⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀  
 
- <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 40%); text-align: center;"><a href="brad.html">    ⛧ ⛧ ⛧  Killa Brad</span></a> <a>⛧</a> <a href="salmon/salmon.html">Killa Salmon  ⛧ ⛧ ⛧</span></a>
+ <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 40%); text-align: center;"><a href="brad.html">    ⛧ ⛧ ⛧  Killa Brad</span></a> <a>⛧</a> <a href="S/salmon.html">Killa Salmon  ⛧ ⛧ ⛧</span></a>
  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 40%); text-align: center;"><a href="https://en.wikipedia.org/wiki/Cock_and_ball_torture">    ⛧ ⛧  Killa Zok</span></a>  <a>⛧</a> <a href="https://linktr.ee/crashtheskyline">Killa Felony  ⛧ ⛧</span></a>
  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 0% 40%); text-align: center;"><a href="https://linktr.ee/killazate">     ⛧  Killa Zate</span></a> <a>⛧</a> <a href="https://killa.lol">Killa Slammed ⛧</span></a> 
  <span id="typElement"></span>
