--- a/S/salmon.html
+++ b/S/salmon.html
@@ -172,6 +172,7 @@
           "salmon is a massive skid",
           "minecraft salmon",
           "song was stolen from kir",
+          "the ip does not go anywhere lol",
  ];
 
  var num = getRandomInt(strs.length);
